Remove body.fixed #maincontent {overflow:hidden;} - was added to prevent nav from disappearing in IE7, no longer issue with new nav

--- a/wdn/templates_3.0/css/variations/fixed.css
+++ b/wdn/templates_3.0/css/variations/fixed.css
@@ -5,11 +5,3 @@ body.fixed #wdn_wrapper {
 body.fixed #breadcrumbs {
 	width: 954px;
 }
-
-
-body.fixed #maincontent {
-	overflow:hidden;
-}
-
-body.fixed #footer {
-}
